[package]
name = "rapt"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.23.8"
num-complex = "0.3"

protobuf = { version = "2", features = ["with-bytes"] }

[lib]
path="src/lib.rs"
name="rapt"
